move external js to loal

--- a/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
+++ b/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
@@ -111,8 +111,8 @@
 
 {% block js_block %}
     <script src="{% static 'copo_accessions/js/copo_accessions.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
-    <script src="https://cdn.datatables.net/plug-ins/1.11.5/sorting/datetime-moment.js"></script>
+    <script src="{% static 'copo/moment/js/moment.min.js' %}"></script>
+    <script src="{% static 'copo/datatables/js/datetime-moment.js' %}"></script>
     <script src="{% static 'copo/js/generic_handlers_ext2.js' %}"></script>
     <script src="{% static 'copo/js/generic_handlers.js' %}"></script>
 {% endblock %}
