--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -46,8 +46,8 @@
           href="{% static 'copo/selectize/selectize.bootstrap3.css' %}">
 
     <link rel="stylesheet" type="text/css"
-          href="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.13.1/b-2.3.3/b-html5-2.3.3/kt-2.8.0/rg-1.3.0/sl-1.5.0/datatables.min.css"/>
-
+          href="{% static 'copo/datatables/css/datatables.min.css' %}">
+ 
     <!-- Google Fonts -->
     <link href="{% static 'copo/css/copo/fonts.css' %}" rel='stylesheet' type='text/css'>
 
@@ -71,7 +71,8 @@
 
     <script src="{% static 'copo/js/base.js' %}"></script>
     <script type="text/javascript"
-            src="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.13.1/b-2.3.3/b-html5-2.3.3/kt-2.8.0/rg-1.3.0/sl-1.5.0/datatables.min.js"></script>
+            src="{% static 'copo/datatables/js/datatables.min.js' %}"></script>
+            <!--src="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.13.1/b-2.3.3/b-html5-2.3.3/kt-2.8.0/rg-1.3.0/sl-1.5.0/datatables.min.js"></script-->
 
     <script src="{% static 'copo/search_highlight/dataTables.searchHighlight.min.js' %}"></script>
     <script src="{% static 'copo/search_highlight/jquery.highlight.js' %}"></script>
