--- a/src/apps/copo_core/templates/copo/copo_data.html
+++ b/src/apps/copo_core/templates/copo/copo_data.html
@@ -69,7 +69,7 @@
 
     <!-- datafile wizard section -->
 
-    <div id="wizard_toggle" class="collapse" style="margin-bottom: 20px;">
+    <!--div id="wizard_toggle" class="collapse" style="margin-bottom: 20px;">
 
         <div class="ui attached blue message" style="background-color: rgba(17, 70, 110, 1.0); color: #fff;">
             <div class="header" style="color: #fff;">
@@ -80,7 +80,7 @@
         <div class="ui attached fluid segment" style="font-size: inherit;">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <div class="pull-right" style="margin-bottom: 15px;">
-                    <!-- exit description button -->
+                    <!!-- exit description button --!>
                     <div id="exit_wizard" class="big ui basic orange button"
                          tabindex="0">
                         <span style="padding-left: 3px;">Exit description</span>
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
 
     <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-6" id="datafile_col_table_div">
