--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{% static 'copo_dtol_submission/css/copo_sample_accept_reject.css' %}">
   <link rel="stylesheet" href="{% static 'copo/css/copo/sample.css' %}">
   <link rel="stylesheet" href="{% static 'copo/bootstrap-treeview-1.2.0/dist/bootstrap-treeview.min.css' %}">
-  <link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.4.0/css/fixedHeader.dataTables.min.css">
+  <link rel="stylesheet" href="{% static 'copo/fixedHeader/css/fixedHeader.dataTables.min.css' %}">
 
   <style>
     .highlight_user_approved_already {
@@ -248,9 +248,9 @@
   <script src="{% static 'copo/js/filesaver.js' %}"></script>
   <script src="{% static 'copo/js/jszip-utils.min.js' %}"></script>
   <script src="{% static 'copo/js/jszip.min.js' %}"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
-  <script src="https://cdn.datatables.net/plug-ins/1.11.5/sorting/datetime-moment.js"></script>
-  <script src="https://cdn.datatables.net/fixedheader/3.4.0/js/dataTables.fixedHeader.min.js"></script>
+  <script src="{% static 'copo/moment/js/moment.min.js' %}"></script>
+  <script src="{% static 'copo/datatables/js/datetime-moment.js' %}"></script>
+  <script src="{% static 'copo/fixedHeader/js/dataTables.fixedHeader.min.js' %}"></script>
   <script src="{% static 'copo_dtol_submission/js/copo_sample_accept_reject.js' %}"></script>
   <script> socket = undefined; </script>
 {% endblock %}
