--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect.html
@@ -128,9 +128,9 @@
 {% block js_block %}
     <script src="{% static 'tol_dashboard/js/tol_inspection.js' %}"></script>
     <script src="{% static 'copo/js/fastdom.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
-    <script src="https://cdn.datatables.net/plug-ins/1.11.5/sorting/datetime-moment.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.3/bootbox.min.js"></script>
+    <script src="{% static 'copo/moment/js/moment.min.js' %}"></script>
+    <script src="{% static 'copo/datatables/js/datetime-moment.js' %}"></script>
+    <script src="{% static 'copo/bootbox/5.5.3/js/bootbox.min.js' %}"></script>
     <script>socket = undefined</script>
 
 {% endblock %}
