--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
@@ -118,5 +118,5 @@
 
 {% block js_block %}
     <script src="{% static 'tol_dashboard/js/tol_inspection_by_gal.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.0/chart.umd.js"></script>
+    <script src="{% static 'copo/chart_js/4.2.0/js/chart.umd.js' %}"></script>
 {% endblock %}
