--- a/src/apps/copo_core/templates/copo/test.html
+++ b/src/apps/copo_core/templates/copo/test.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <script src="/static/copo/js/jquery-3.7.1.min.js"></script>
     {# <script src="/static/copo/js/jquery-3.7.1.js"></script>#}
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="{% static 'copo/jquery-ui/1.13.2/js/jquery-ui.js' %}"></script>
     {##}
     {##}
     {##}
     {##}
     {#  <link rel="stylesheet" href="/resources/demos/style.css">#}
     {#  <script src="/static/copo/js/jquery-3.7.1.js"></script>#}
-    {#  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>#}
+    {#  <script src="{% static 'copo/jquery-ui/1.13.2/js/jquery-ui.js' %}"></script>#}
     <script>
         $(function () {
             $("#commonvalueID").datepicker({dateFormat: "yy-mm-dd", maxDate: 0});
