--- a/src/apps/copo_landing_page/templates/manifests.html
+++ b/src/apps/copo_landing_page/templates/manifests.html
@@ -244,20 +244,20 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="https://www.fuelcdn.com/fuelux/3.17.1/css/fuelux.min.css">
+    <link rel="stylesheet" href="{% static 'copo/fuelux/3.17.1/css/fuelux.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/manifests.css' %}">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 
 
     <script src="{% static 'copo/js/jquery-3.7.1.min.js' %}"
             crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="{% static 'copo/jquery-ui/1.13.2/js/jquery-ui.js' %}"></script>
 
     <script src="{% static 'assets/js/manifests.js' %}"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fuelux/3.17.2/js/fuelux.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.3/bootbox.min.js"></script>
+    <script src="{% static 'copo/fuelux/3.17.2/js/fuelux.min.js' %}"></script>
+    <script src="{% static 'copo/bootbox/5.5.3/js/bootbox.min.js' %}"></script>
 {% endblock %}
