update with showing image thumbnail

--- a/src/apps/copo_core/templates/copo/copo_profile_types.html
+++ b/src/apps/copo_core/templates/copo/copo_profile_types.html
@@ -14,6 +14,10 @@ const title_button_def = {
 
 }
 
+const media_url = "{{ media_url }}";
+const upload_url = "{{ upload_url }}";
+const image_file_extensions = "{{ image_file_extensions }}";
+
 const record_action_button_def = {
   {% for button in record_action_button_def %}
     {{ button.name  }}: {
