--- a/src/apps/copo_core/templates/copo/base_simple.html
+++ b/src/apps/copo_core/templates/copo/base_simple.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Collaborative OPen Omics (COPO) project team">
+    <meta name="description" content="{% block meta_description %}COPO supports members of the life sciences community in brokering, managing, and submitting omics data and metadata to public repositories.{% endblock %}">
     <title>{% block title %}{% endblock %} | COPO</title>
 
 
