--- a/src/apps/copo_core/templates/copo/copo_group.html
+++ b/src/apps/copo_core/templates/copo/copo_group.html
@@ -199,7 +199,7 @@
     <div style="visibility: hidden" id="tool_window" class="row">
 
         <div class="col-lg-6 col-md-6 col-sm-6">
-            <p class="lead">Profiles in Group</p>
+            <label for="profiles_in_group" lass="lead">Profiles in Group</label>
             <select multiple="multiple" id="profiles_in_group" name="profiles_in_group">
             </select>
 
