--- a/src/apps/copo_landing_page/templates/about.html
+++ b/src/apps/copo_landing_page/templates/about.html
@@ -8,10 +8,6 @@
     body {
         background-color: rgba(49, 48, 44, 0.7);
     }
-    
-    a {
-        color: mediumblue;
-    }
 
     p {
         color: #1a1c1a;
@@ -54,7 +50,8 @@
             retrieve data more easily, using community standards and public repositories that 
             enable the open sharing of results. The COPO project is one of several projects 
             supported by the 
-            <a href="https://www.earlham.ac.uk/research-project/collaborative-open-omics-copo">
+            <a class="about_link" 
+                href="https://www.earlham.ac.uk/research-project/collaborative-open-omics-copo">
                 Earlham Institute</a> (EI), in Norwich, United Kingdom.
         </p><br>
         <p>
@@ -71,12 +68,12 @@
         <p>
             The portal requires cookies, fonts and the limited processing of your personal data 
             in order to function as outlined in the 
-            <a style="text-decoration: underline; color: mediumblue;" href="/about/privacy_notice">Privacy Notice</a>
-            and <a style="text-decoration: underline; color: mediumblue;" href="/about/terms_of_use">Terms of Use</a>.
+            <a class="about_link" href="/about/privacy_notice">Privacy Notice</a>
+            and <a class="about_link" href="/about/terms_of_use">Terms of Use</a>.
         </p>
         <br>
         <p>
-            More information about COPO is available in its <a href="https://copo-docs.readthedocs.io/en/latest/">
+            More information about COPO is available in its <a class="about_link" href="https://copo-docs.readthedocs.io/en/latest/">
             documentation</a>.
         </p>
         <hr>
@@ -120,7 +117,7 @@
                    these areas to improve the tools available to researchers.
                 </p>
                 <p class="p_orcid"><img src="/static/assets/img/orcid.png" alt="ORCID logo"><a
-                        href="http://orcid.org/0000-0001-9649-5906"> orcid.org/0000-0001-9649-5906</a></p>
+                    class="about_link" href="http://orcid.org/0000-0001-9649-5906"> orcid.org/0000-0001-9649-5906</a></p>
             </div>
         </div>
     </div>
@@ -194,7 +191,7 @@
             </li>
             <li><a href="http://orcid.org/0000-0002-2323-6847">David Johnson</a>, Oxford e-Research Centre
             </li>
-            <li><a href="http://orcid.org/0000-0003-3499-8262&quot;">Alejandra Gonzalez Beltran</a>, Oxford
+            <li><a href="http://orcid.org/0000-0003-3499-8262">Alejandra Gonzalez Beltran</a>, Oxford
                 e-Research
                 Centre
             </li>
