--- a/src/apps/copo_landing_page/templates/base1.html
+++ b/src/apps/copo_landing_page/templates/base1.html
@@ -12,9 +12,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Collaborative OPen Omics (COPO) project team">
+    <meta name="description" content="{% block meta_description %}COPO supports members of the life sciences community in brokering, managing, and submitting omics data and metadata to public repositories.{% endblock %}">
     <!--[if IE]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
@@ -31,7 +31,6 @@
     <script src="{% static 'copo/js/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static 'copo/semantic_ui/semantic.min.js' %}"></script>
     <script src="{% static 'copo/js/bootstrap.js' %}"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="{% static 'copo/img/favicon_black.png' %}"/>
     <script src="{% static 'assets/js/landing.js' %}"></script>
