--- a/src/apps/copo_tol_dashboard/templates/stats/variable_histogram_statistics.html
+++ b/src/apps/copo_tol_dashboard/templates/stats/variable_histogram_statistics.html
@@ -29,7 +29,7 @@
   <div class="col-lg-10 col-md-2 col-sm-10">
     <!-- Chart metric dropdown menu -->
     <div class="dropdown-menu-wrapper">
-        <label for="changeChartMetric">Change Element</label>
+        <label for="changeHistMetric">Change Element</label>
         <select autocomplete="off" class="form-control" id="changeHistMetric" style="width: 200px">
             <option value="COLLECTOR_AFFILIATION" selected>
                 Collector Affiliation
