--- a/src/apps/copo_core/templates/copo/base2.html
+++ b/src/apps/copo_core/templates/copo/base2.html
@@ -4,7 +4,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1">
+    <meta name="author" content="Collaborative OPen Omics (COPO) project team">
+    <meta name="description" content="{% block meta_description %}COPO supports members of the life sciences community in brokering, managing, and submitting omics data and metadata to public repositories.{% endblock %}">
     <title>{% block title %}{% endblock %} | COPO</title>
 
     <!--REQUIRED STYLE SHEETS-->
