--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -24,7 +24,7 @@
                 <li role="presentation"><a href="/" target="_parent">Home</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Analytics <span class="caret"></span></a>
+                       aria-expanded="false" aria-label="Analytics dropdown menu">Analytics <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li role="presentation"><a href="/copo/tol_dashboard/stats" target="_parent">Statistics</a></li>
                         <li role="presentation"><a href="/copo/tol_dashboard/tol" target="_parent">Tree of Life Dashboard</a></li>
