--- a/src/apps/copo_news/templates/copo/news_sublist.html
+++ b/src/apps/copo_news/templates/copo/news_sublist.html
@@ -26,7 +26,7 @@
                             </div>
                             <div class="centre mt-10 mb-10">
                                 <a id="readMoreBtnID" class="btn-accent news-button btn-big" href="{% url 'news:news_item' news.id %}">
-                                    Read more
+                                    Read more <span class="sr-only">about "{{ news.title|truncatechars:10 }}"</span>
                                     <i class="fa fa-chevron-right"></i>
                                 </a>
                             </div>
@@ -55,7 +55,7 @@
 <!-- View more button section -->
  {% if newsItemsTotalCount > 3 %}
     <div class="centre mt-10">
-        <a id="viewMoreNewsBtnID" class="btn-accent news-button btn-big" href="/news" target="_parent">View more news
+        <a id="viewMoreNewsBtnID" class="btn-accent news-button btn-big" href="/news" target="_parent">View more COPO news articles
         </a>
     </div>
 {% endif %}
