chore (attempt-1): improve performance, accessibility, best practices and SEO

--- a/src/apps/copo_core/templates/copo/base_simple.html
+++ b/src/apps/copo_core/templates/copo/base_simple.html
@@ -13,9 +13,9 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'copo/css/bootstrap/bootstrap.css' %}">
-    <!--<link rel="stylesheet" href="{% static 'copo/css/bootstrap/bootstrap-theme.css' %}">-->
-    <link rel="stylesheet" href="{% static 'copo/css/copo/style.css' %}">
-    <link rel="stylesheet" href="{% static 'copo/css/copo/menu.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'copo/css/bootstrap/bootstrap-theme.min.css' %}">-->
+    <link rel="stylesheet" href="{% static 'copo/css/copo/style.min.css' %}">
+    <link rel="stylesheet" href="{% static 'copo/css/copo/menu.min.css' %}">
 
     <link rel="shortcut icon" href="{% static 'copo/img/dna_orange.png' %}"/>
 
