--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -7,7 +7,7 @@
 {% block meta_description %}Manage and explore work profiles (aka studies or projects) seamlessly. Create, edit or delete profiles and navigate to related components like samples, reads, and files. Infinite scroll lets you view more profiles effortlessly.{% endblock %}
 
 {% block stylesheet_block %}
-    <link rel="stylesheet" href="{% static 'copo_profile/css/copo_profile_index.css' %}">
+    <link rel="stylesheet" href="{% static 'copo_profile/css/copo_profile_index.min.css' %}">
 {% endblock %}
 
 
