--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -20,14 +20,14 @@
     <link rel="stylesheet" media="print" onload="this.media='all'"
           href="{% static 'copo/css/bootstrap/dropdowns-enhancement.css' %}">
     <link rel="stylesheet" media="print" onload="this.media='all'"
-          href="{% static 'copo/css/bootstrap/bootstrap-theme.css' %}">
+          href="{% static 'copo/css/bootstrap/bootstrap-theme.min.css' %}">
     <link rel="stylesheet" media="print" onload="this.media='all'"
           href="{% static 'copo/bootstrap_switch/css/bootstrap-switch.css' %}">
-    <link rel="stylesheet" media="print" onload="this.media='all'" href="{% static 'copo/fuelux/css/fuelux.css' %}">
+    <link rel="stylesheet" media="print" onload="this.media='all'" href="{% static 'copo/fuelux/css/fuelux.min.css' %}">
     <link rel="stylesheet" media="print" onload="this.media='all'"
           href="{% static 'copo/rangeslider/rangeslider.css' %}">
-    <link rel="stylesheet" media="print" onload="this.media='all'" href="{% static 'copo/css/copo/style.css' %}">
-    <link rel="stylesheet" media="print" onload="this.media='all'" href="{% static 'copo/css/copo/menu.css' %}">
+    <link rel="stylesheet" media="print" onload="this.media='all'" href="{% static 'copo/css/copo/style.min.css' %}">
+    <link rel="stylesheet" media="print" onload="this.media='all'" href="{% static 'copo/css/copo/menu.min.css' %}">
     <link rel="stylesheet" media="print" onload="this.media='all'"
           href="{% static 'copo/autocomplete.js-2.1.0/autocomplete.css' %}">
     <link rel="stylesheet" media="print" onload="this.media='all'"
@@ -44,7 +44,7 @@
 
     <!-- Selectize Components -->
     <link rel="stylesheet" media="print" onload="this.media='all'"
-          href="{% static 'copo/selectize/selectize.bootstrap3.css' %}">
+          href="{% static 'copo/selectize/selectize.bootstrap3.min.css' %}">
 
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.13.1/b-2.3.3/b-html5-2.3.3/kt-2.8.0/rg-1.3.0/sl-1.5.0/datatables.min.css"/>
