--- a/src/apps/copo_core/templates/copo/base2.html
+++ b/src/apps/copo_core/templates/copo/base2.html
@@ -15,7 +15,7 @@
     <!-- FONTAWESOME STYLE CSS -->
     <link href="/static/copo/css/fontawesome/fontawesome-6.5.1.min.css" rel="stylesheet" />
     <!-- CUSTOM STYLE CSS -->
-    <link href="/static/assets/css/style.css" rel="stylesheet" />
+    <link href="/static/assets/css/style.min.css" rel="stylesheet" />
 
     <!-- BANNER STYLE CSS -->
     <link href="/static/assets/css/base_banner.css" rel="stylesheet">
