--- a/src/apps/copo_core/templates/copo/test.html
+++ b/src/apps/copo_core/templates/copo/test.html
@@ -21,7 +21,7 @@
     {##}
     {##}
     {##}
-    {#  <link rel="stylesheet" href="/resources/demos/style.css">#}
+    {#  <link rel="stylesheet" href="/resources/demos/style.min.css">#}
     {#  <script src="/static/copo/js/jquery-3.7.1.js"></script>#}
     {#  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>#}
     <script>
