--- a/src/apps/copo_landing_page/templates/dtol.html
+++ b/src/apps/copo_landing_page/templates/dtol.html
@@ -25,7 +25,7 @@
     <!-- FONTAWESOME STYLE CSS -->
     <link href="/static/copo/css/fontawesome/fontawesome-6.5.1.min.css" rel="stylesheet"/>
     <!-- CUSTOM STYLE CSS -->
-    <link href="/static/assets/css/style.css" rel="stylesheet"/>
+    <link href="/static/assets/css/style.min.css" rel="stylesheet"/>
     <!-- GOOGLE FONT -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
