Fix incorrect ID

--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -58,9 +58,9 @@
 <div class="row padding-top-20">
   <div class="col-lg-9 col-sm-9 col-md-9">
     <h3 class="h3">
-      <label class="no-bold" for="manifest_type_id">Choose to Accept or Reject&emsp;&nbsp;</label>
+      <label class="no-bold" for="group_id">Choose to Accept or Reject&emsp;&nbsp;</label>
       <select
-        id="manifest_type_id"
+        id="group_id"
         class="form-control"
         style="display: inline-block; width: fit-content"
         name="group"
