Added meta description to web page

--- a/src/apps/copo_core/templates/copo/copo_group.html
+++ b/src/apps/copo_core/templates/copo/copo_group.html
@@ -5,6 +5,7 @@
 {% load web_tags %}
 
 {% block title %}Groups{% endblock %}
+{% block meta_description %}Create and share user profiles by forming groups. Assign profiles to groups and share them with other registered users for collaboration and easy access.{% endblock %}
 
 {% block stylesheet_block %}
     <link rel="stylesheet" href="{% static 'copo/css/copo/browse_style.css' %}" xmlns="http://www.w3.org/1999/html">
