--- a/src/apps/copo_core/templates/copo/error_page.html
+++ b/src/apps/copo_core/templates/copo/error_page.html
@@ -4,6 +4,7 @@
 {% load web_tags %}
 
 {% block title %}Error{% endblock %}
+{% block meta_description %}Something went wrong! Please try again later or contact COPO project team for assistance.{% endblock %}
 
 {% block stylesheet_block %}
     <link rel="stylesheet" href="{% static 'copo/css/copo/browse_style.css' %}" xmlns="http://www.w3.org/1999/html">
