--- a/src/apps/copo_core/templates/copo/terms_of_use.html
+++ b/src/apps/copo_core/templates/copo/terms_of_use.html
@@ -1,7 +1,9 @@
 {% extends 'copo/base2.html' %}
 
 {% load static %}
+
 {% block title %}Terms of Use{% endblock %}
+{% block meta_description %}Read the terms that govern your access to and use of this website and its services.{% endblock %}
 
 {% block stylesheet_block %}
 <style>
