--- a/src/apps/copo_core/templates/copo/unauthorised_page.html
+++ b/src/apps/copo_core/templates/copo/unauthorised_page.html
@@ -4,13 +4,13 @@
 {% load web_tags %}
 
 {% block title %}Unauthorisation{% endblock %}
+{% block meta_description %}You do not have permission to access this page. Please access a different web page or contact COPO project team for help.{% endblock %}
 
 {% block stylesheet_block %}
     <link rel="stylesheet" href="{% static 'copo/css/copo/browse_style.css' %}" xmlns="http://www.w3.org/1999/html">
     <style>
         body {
             background-image: none !important;
-
         }
     </style>
 {% endblock %}
