--- a/src/apps/copo_core/templates/copo/user_info.html
+++ b/src/apps/copo_core/templates/copo/user_info.html
@@ -4,11 +4,12 @@
 {% load web_tags_orcid %}
 
 {% block title %}User Information{% endblock %}
+{% block meta_description %}View your user information such as ORCiD ID associated with your COPO account.{% endblock %}
 
 {% block stylesheet_block %}
     <link rel="stylesheet" href="{% static 'copo/css/copo/browse_style.css' %}" xmlns="http://www.w3.org/1999/html">
     <link rel="stylesheet" href="{% static 'copo/css/copo/orcid_profile.css' %}"
-          xmlns="http://www.w3.org/1999/html">
+        xmlns="http://www.w3.org/1999/html">
 {% endblock %}
 
 
