--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -4,6 +4,7 @@
 {% load html_tags %}
 
 {% block title %}Accept/Reject Samples{% endblock %}
+{% block meta_description %}Review and manage sample metadata submissions. Sample managers can accept or reject samples based on profile information, images, and permits before they are submitted to public repositories.{% endblock %}
 
 {% block stylesheet_block %}
   <link rel="stylesheet" href="{% static 'copo/css/copo/blueimp-gallery.min.css' %}">
